--- a/templates/site.conf.erb
+++ b/templates/site.conf.erb
@@ -1,6 +1,6 @@
-<VirtualHost *:80>
+<VirtualHost *:<%= port %>>
         ServerAdmin webmaster@localhost
-        DocumentRoot /home/aleksi/website
+        DocumentRoot <%= docroot %>
 	<Directory /home/aleksi/website/>
         Options Indexes FollowSymLinks
         AllowOverride None
